archivist: expose endpoint for serving docs.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -67,6 +67,7 @@ archivist.path.plugins=${archivist.path.shared}/plugins
 archivist.path.models=${archivist.path.shared}/models
 archivist.path.backups=${archivist.path.shared}/backups
 archivist.path.logs=${archivist.path.shared}/logs
+archivist.path.docs=${archivist.path.shared}/docs
 
 archivist.watermark.enabled = false
 archivist.watermark.template = Copyright Foo
