--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # 0 for all CPUs, both physical and logical
 # -1 for 1/2 the number of available CPUS
 analyst.executor.threads = -1
-analyst.master.host = https://archivist:8066
+analyst.master.host = http://archivist:8066
 
 analyst.index.data=true
 analyst.path.home=.
@@ -11,12 +11,7 @@ analyst.path.index=${analyst.path.home}/db/index
 
 server.port = 8099
 server.devices=eth0,eth1,wlan0,en0,en1
-server.ssl.enabled = true
-server.ssl.key-store = certs/keystore.p12
-server.ssl.key-store-password = zorroa
-server.ssl.key-password = zorroa
-server.ssl.key-store-type = PKCS12
-server.ssl.key-alias = ingestor
-server.ssl.trust-store = certs/truststore.p12
-server.ssl.trust-store-password = zorroa
+
+server.ssl.enabled = false
+
 
