--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -6,15 +6,7 @@ server.port=8066
 server.session.timeout=6000
 server.session.persistent=false
 
-server.ssl.enabled = true
-server.ssl.key-store = certs/keystore.p12
-server.ssl.key-store-password = zorroa
-server.ssl.key-password = zorroa
-server.ssl.key-store-type = PKCS12
-server.ssl.key-alias = zorroa
-server.ssl.trust-store = certs/truststore.p12
-server.ssl.trust-store-password = zorroa
-server.ssl.trust-store-type = PKCS12
+server.ssl.enabled = false
 
 spring.thymeleaf.prefix = classpath:templates/
 spring.http.multipart.max-file-size=100MB
