--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.session.persistent=false
 server.ssl.enabled = false
 
 spring.thymeleaf.prefix = classpath:templates/
+spring.thymeleaf.excluded-view-names=index
+
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
 
