Make sure all shared folders are creatded. Made a hard coded list to fix issue of the arhivist possibly not having the same shared mount as the analysts.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -62,6 +62,7 @@ archivist.path.models=${archivist.path.shared}/models
 archivist.path.backups=${archivist.path.shared}/backups
 archivist.path.logs=${archivist.path.shared}/logs
 archivist.path.docs=${archivist.path.shared}/docs
+archivist.path.certs=${archivist.path.shared}/certs
 
 archivist.watermark.enabled = false
 archivist.watermark.template = Copyright Foo
