archivist: increase defaults for file size uploads.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -11,8 +11,8 @@ server.ssl.enabled = false
 spring.thymeleaf.prefix = classpath:templates/
 spring.thymeleaf.excluded-view-names=index
 
-spring.http.multipart.max-file-size=100MB
-spring.http.multipart.max-request-size=100MB
+multipart.max-file-size=100Mb
+multipart.max-request-size=10Mb
 
 management.security.enabled = false
 endpoints.health.sensitive = false
