archivist: removed unused configuration option.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -100,10 +100,7 @@ archivist.events.ssl=false
 ## Scheduler configuration.
 ##
 
-### The maximum number of ingests that can be running simultaneously.
-archivist.scheduler.maxRunningJobs = 2
-
-### Tne maximum number of queued units of work each analyst can have.
+### The maximum number of queued units of work each analyst can have.
 archivist.scheduler.maxQueueSize = 2
 
 ##
