archivist: check for down analysts before sceduling new tasks.  Mark them as down if needed. [Fixes #134361703]

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -119,6 +119,10 @@ archivist.search.queryFields.keywords.all.raw = 2.0
 
 # Maintenance options.
 
+### Number of seconds on inactivity before an analyst is considered down.
+### Analysts report in every 15 seconds.
+archivist.maintenance.analyst.inactiveTimeoutSeconds = 60
+
 ### Remove job logs and task data after N days.
 archivist.maintenance.jobs.expireDays = 7
 
