server: moves active scheduling to the analyst side, so each analyst asks for tasks.  This eliminates the need for the archivist and alanyst to be in complete sync for scheduling purposes, and the analysts can ask for as many tasks as they need to keep their pipeline full.
[Fixes #134451373]

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -3,6 +3,10 @@
 # 0 for all CPUs, both physical and logical
 # -1 for 1/2 the number of available CPUS
 analyst.executor.threads = -1
+
+# Maximum number of tasks that can be queued at one time.
+analyst.executor.maxQueueSize = 4
+
 analyst.master.host = http://archivist:8066
 
 analyst.index.data=true
