Added LDAP authenticaton support. [Fixes #134293373]

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -20,7 +20,7 @@ endpoints.health.sensitive = false
 flyway.check-location=true
 
 logging.level.com.googlecore.flyway=DEBUG
-logging.level.io.undertow.request=warn
+logging.level.io.undertow.request=OFF
 
 spring.jackson.serialization-inclusion:non_null
 
@@ -97,8 +97,12 @@ archivist.events.port=8087
 archivist.events.ssl=false
 
 ##
-## Scheduler configuration.
+## LDAP Security configuration.
 ##
+archivist.security.ldap.enabled=false
+archivist.security.ldap.url=ldap://ldap:389
+archivist.security.ldap.base=ou=people,o=sevenSeas
+archivist.security.ldap.filter=(cn={0})
 
 ##
 ## Export configuration.
