--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -18,7 +18,7 @@
         <start-class>com.zorroa.analyst.Application</start-class>
         <java.version>1.8</java.version>
         <timestamp>${maven.build.timestamp}</timestamp>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm z</maven.build.timestamp.format>
     </properties>
 
     <parent>
