--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -23,7 +23,7 @@
         <start-class>com.zorroa.archivist.Application</start-class>
         <java.version>1.8</java.version>
         <timestamp>${maven.build.timestamp}</timestamp>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm z</maven.build.timestamp.format>
     </properties>
 
     <dependencies>
