--- a/common/pom.xml
+++ b/common/pom.xml
@@ -52,9 +52,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.elasticsearch.module</groupId>
+            <artifactId>lang-groovy</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.module</groupId>
+            <artifactId>lang-expression</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.6</version>
         </dependency>
 
         <dependency>
