--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -61,14 +61,28 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
         </dependency>
 
         <dependency>
+            <groupId>org.elasticsearch.module</groupId>
+            <artifactId>lang-groovy</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.module</groupId>
+            <artifactId>lang-expression</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.6</version>
         </dependency>
 
         <!--
