--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,27 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>2.4.4</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.elasticsearch.module</groupId>
+                <artifactId>lang-groovy</artifactId>
+                <version>2.2.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.elasticsearch.module</groupId>
+                <artifactId>lang-expression</artifactId>
+                <version>2.2.2</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.elasticsearch</groupId>
                 <artifactId>elasticsearch</artifactId>
-                <version>2.1.2</version>
+                <version>2.2.2</version>
             </dependency>
 
             <dependency>
