Adds an endpoint for mass setting of permissions on Assets. Requires [Fixes #135711131]

--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -145,7 +145,7 @@
         },
         "permissions": {
           "properties": {
-            "search": {
+            "read": {
               "type": "integer",
               "index": "not_analyzed"
             },
