Documented all server options for archivist.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -1,124 +1,118 @@
-
-#
-# Spring and Spring Boot Settings
-#
-server.port=8066
-server.session.timeout=6000
-server.session.persistent=false
-
-server.ssl.enabled = false
-
-spring.thymeleaf.prefix = classpath:templates/
-spring.thymeleaf.excluded-view-names=index
-
-multipart.max-file-size=100Mb
-multipart.max-request-size=10Mb
-
-management.security.enabled = false
-endpoints.health.sensitive = false
-
-flyway.check-location=true
-
-logging.level.com.googlecore.flyway=DEBUG
-logging.level.io.undertow.request=OFF
-
-spring.jackson.serialization-inclusion:non_null
-
-
-# Zorroa Settings.
-## Elastic Cluster Settings.
-
-### The name of the elasticsearch index.
-zorroa.cluster.index.alias=archivist
-
-### The port the archivist elasticsearch TCP transport is running on.
-zorroa.cluster.index.port=9401
-
 # Archivist Settings
 
-## Archivist Elastic Settings
+## Local Path Settings
 
-### Determines if the Archivist should store elastic data.
-archivist.index.data=true
-
-### Determines if the Archivist is an elasticsearch master.
-archivist.index.master=true
-
-archivist.path.home=.
-archivist.path.db=${archivist.path.home}/db/h2/archivist
-archivist.path.index=${archivist.path.home}/db/index
-
-#
-# The plugin search path is where the server will look for plugin
-# packages.
-#
+### A colon delimited list of locations the Archivist will search for plugin packages.
 archivist.path.pluginSearchPath=${archivist.path.home}/plugins:../../zorroa-plugin-sdk/dist
 
+### The base path where the Archivist will look for its supporting directory structure.
+archivist.path.home=.
+
+### The path where Archivist will store its embedded SQL database.
+archivist.path.db=${archivist.path.home}/db/h2/archivist
+
+### The path where Archivist will store a its portion of the distributed asset database.
+archivist.path.index=${archivist.path.home}/db/index
+
+## Shared Path Settings
+
+### The path where the Archivist will look for the shared data root.
 archivist.path.shared=${archivist.path.home}/shared
+
+### The path where the Archivist will look for the object file system root.
+### The object file system serves as storage for thumbnails and other extracted data.
 archivist.path.ofs=${archivist.path.shared}/ofs
+
+### The path where the Archivist will store exports before they are downloaded.
 archivist.path.exports=${archivist.path.shared}/exports
+
+### The path where the Archivist will store imported files uploaded to the server.
+archivist.path.imports=${archivist.path.shared}/imports
+
+### The path where the Archivist will unpack and install plugins.
 archivist.path.plugins=${archivist.path.shared}/plugins
+
+### The path where the Archivist will store model files.
 archivist.path.models=${archivist.path.shared}/models
+
+### The path where the Archivist will store SQL server backups.
 archivist.path.backups=${archivist.path.shared}/backups
+
+### The path where the Archivist will store task logs.
 archivist.path.logs=${archivist.path.shared}/logs
+
+### The path where the Archivist will store plugin docs.
 archivist.path.docs=${archivist.path.shared}/docs
+
+### The path where the Archivist will store SSL public keys.
 archivist.path.certs=${archivist.path.shared}/certs
 
-archivist.watermark.enabled = false
-archivist.watermark.template = Copyright Foo
+## Index Settings
 
-##
-## Default external configuration options.  Any configuration option prefixed
-## with 'zorroa.external.' is available to the analysts.
-##
+### Determines if the Archivist should store asset search data.
+archivist.index.data=true
 
-### This is where the analysts would look for shared data.
-zorroa.cluster.path.shared=${archivist.path.shared}
-zorroa.cluster.path.ofs=${zorroa.cluster.path.shared}/ofs
-zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
-zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
-zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
-zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
-zorroa.cluster.path.logs=${zorroa.cluster.path.shared}/logs
-zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
+### Determines if the Archivist should serve an ElasticSearch master.
+archivist.index.master=true
 
-##
 ## Internal DB configuration.
-##
+
+### The JDBC URL to the Archivist SQL database.
 archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1
+
+### The driver for the Archivist SQL database.
 archivist.datasource.primary.driver-class-name=org.h2.Driver
+
+### The username for the Archivist SQL database.
 archivist.datasource.primary.username=sa
+
+### The password for the Archvist SQL database.
 archivist.datasource.primary.password=
 
-##
-## Event port configuration
-##
-archivist.events.port=8087
-archivist.events.ssl=false
-
-##
 ## LDAP Security configuration.
-##
+
+### Determines if the Archivist LDAP plugin is enabled.
 archivist.security.ldap.enabled=false
+
+### The URL of the LDAP server.
 archivist.security.ldap.url=ldap://ldap:389
+
+### The base of the LDAP query.
 archivist.security.ldap.base=ou=people,o=sevenSeas
+
+### A pattern for matching the username.
 archivist.security.ldap.filter=(cn={0})
 
-##
-## Export configuration.
-##
+## Search Settings
 
-archivist.export.autoStart=true
-archivist.export.basePath=exports
-archivist.export.maxAssetCount=1024
-archivist.export.maxTotalFileSize=500M
-archivist.export.expireTime=1w
-
-# Search Options
+### Default search field and boost value.
 archivist.search.queryFields.keywords.all = 1.0
+
+### Default search field and boost value.
 archivist.search.queryFields.keywords.all.raw = 2.0
 
-# Maintenance options.
+## Export Settings
+
+### The maximum number of assets a user can export at one time.
+archivist.export.maxAssetCount=1024
+
+## Watermark Settings
+
+### Enable watermarking of proxy images.
+archivist.watermark.enabled = false
+
+### Text to apply to proxy images.
+archivist.watermark.template = Copyright Foo
+
+## Event port configuration (deprecated)
+
+### The port for publishing events. (deprecated)
+archivist.events.port=8087
+
+### Dertermine if SSL is available event port. (deprecated)
+archivist.events.ssl=false
+
+## Maintenance options.
 
 ### Number of seconds on inactivity before an analyst is considered down.
 ### Analysts report in every 15 seconds.
@@ -129,4 +123,97 @@ archivist.maintenance.jobs.expireDays = 7
 
 ### Remove backup data after the given period of time.
 archivist.maintenance.backups.expireDays = 7
+
+# Cluster Settings
+# Shared cluster settings are propagated to the Analysts.
+
+## Custer Index Settings
+
+### The name of the elasticsearch index.
+zorroa.cluster.index.alias=archivist
+
+### The port the Archivist elasticsearch TCP transport is running on.
+zorroa.cluster.index.port=9401
+
+## Cluster Path Settings
+
+### The root path to shared data.  Shared data is a shared storage location such
+### as an NFS mount where the Zorroa Platform stores information that all
+### servers need access to.
+zorroa.cluster.path.shared=${archivist.path.shared}
+
+### The path where the Archivist will look for the object file system root.
+### The object file system serves as storage for thumbnails and other extracted data.
+zorroa.cluster.path.ofs=${zorroa.cluster.path.shared}/ofs
+
+### The path where the Archivist will unpack and install plugins.
+zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
+
+### The path where the Archivist will store model files.
+zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
+
+### The path where the Archivist will store exports before they are downloaded.
+zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
+
+### The path where the Archivist will store imported files uploaded to the server.
+zorroa.cluster.path.imports=${zorroa.cluster.path.shared}/imports
+
+### The path where the Archivist will store task logs.
+zorroa.cluster.path.logs=${zorroa.cluster.path.shared}/logs
+
+### Locaton of SSL cert files needed by client libraries, if any.
+zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
+
+# Spring Settings
+
+## Server Settings
+
+### The TCP port for client libraries for communicate with server.
+server.port=8066
+
+### The timeout for inactive sessions.  Timed out sessions are removed.
+server.session.timeout=6000
+
+### Determines if SSL is enabled or not.
+server.ssl.enabled = false
+
+## Spring Thymeleaf Settings
+
+### The classpath to Thymeleaf templates.
+spring.thymeleaf.prefix = classpath:templates/
+
+### The default template name
+spring.thymeleaf.excluded-view-names=index
+
+## File Upload Settings
+
+### The maximum filesize for a multipart request.
+multipart.max-file-size=100Mb
+
+## The maxiumum size of a multipart request.
+multipart.max-request-size=500Mb
+
+## Heath and Management
+
+### Determines if anonymous users can see health endpoints.
+management.security.enabled = false
+
+### Set to false if health endpoint data is no sensitive.
+endpoints.health.sensitive = false
+
+## Database Migration Settings
+
+### Check that a migration script location exists.
+flyway.check-location=true
+
+## Logging Options
+
+### Logger setting for individual HTTP requests
+logging.level.io.undertow.request=OFF
+
+## JSON Options
+
+### Disables serializing null values.
+spring.jackson.serialization-inclusion:non_null
+
 
