archivist: disable persistent sessions.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -174,6 +174,9 @@ server.port=8066
 ### The timeout for inactive sessions.  Timed out sessions are removed.
 server.session.timeout=6000
 
+#### Disable persistent sessions or else startup errors may occur.
+server.session.persistent=false
+
 ### Determines if SSL is enabled or not.
 server.ssl.enabled = false
 
@@ -197,6 +200,9 @@ multipart.max-request-size=500Mb
 
 ### Determines if anonymous users can see health endpoints.
 management.security.enabled = false
+
+### Disable health check for Elastic, Spring does not support 2.2 yet.
+management.health.elasticsearch.enabled=false
 
 ### Set to false if health endpoint data is no sensitive.
 endpoints.health.sensitive = false
