server: combined shared/imports, shared/exports and potentially other job types into /shared/jobs. Then under that is the type, date, etc.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -23,12 +23,6 @@ archivist.path.shared=${archivist.path.home}/shared
 ### The object file system serves as storage for thumbnails and other extracted data.
 archivist.path.ofs=${archivist.path.shared}/ofs
 
-### The path where the Archivist will store exports before they are downloaded.
-archivist.path.exports=${archivist.path.shared}/exports
-
-### The path where the Archivist will store imported files uploaded to the server.
-archivist.path.imports=${archivist.path.shared}/imports
-
 ### The path where the Archivist will unpack and install plugins.
 archivist.path.plugins=${archivist.path.shared}/plugins
 
@@ -38,8 +32,8 @@ archivist.path.models=${archivist.path.shared}/models
 ### The path where the Archivist will store SQL server backups.
 archivist.path.backups=${archivist.path.shared}/backups
 
-### The path where the Archivist will store task logs.
-archivist.path.logs=${archivist.path.shared}/logs
+### The path where the Archivist will store job data.
+archivist.path.jobs=${archivist.path.shared}/jobs
 
 ### The path where the Archivist will store plugin docs.
 archivist.path.docs=${archivist.path.shared}/docs
@@ -152,14 +146,8 @@ zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
 ### The path where the Archivist will store model files.
 zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
 
-### The path where the Archivist will store exports before they are downloaded.
-zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
-
-### The path where the Archivist will store imported files uploaded to the server.
-zorroa.cluster.path.imports=${zorroa.cluster.path.shared}/imports
-
-### The path where the Archivist will store task logs.
-zorroa.cluster.path.logs=${zorroa.cluster.path.shared}/logs
+### The path where the Archivist will store job information.
+zorroa.cluster.path.jobs=${zorroa.cluster.path.shared}/jobs
 
 ### Locaton of SSL cert files needed by client libraries, if any.
 zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
