Removed un-removed instances of export path.

--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -9,6 +9,5 @@ zorroa.cluster.path.shared=../unittest/shared
 zorroa.cluster.path.ofs=${zorroa.cluster.path.shared}/storage
 zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
 zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
-zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
-zorroa.cluster.path.logs=${zorroa.cluster.path.shared}/logs
+zorroa.cluster.path.jobs=${zorroa.cluster.path.shared}/jobs
 zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
