archivist: allow archivist config to propagate env vars to analysts.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -152,6 +152,11 @@ zorroa.cluster.path.jobs=${zorroa.cluster.path.shared}/jobs
 ### Locaton of SSL cert files needed by client libraries, if any.
 zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
 
+## Cluster Environment Settings
+
+### Propagate an environment varaible to all analyst processes.
+#//zorroa.cluster.env.PYTHONPATH = $PYTHONPATH:/usr/local/lib/python2.7/site-packages
+
 # Spring Settings
 
 ## Server Settings
