archivist: added configuration options and endpoints for getting file and directory suggestions for imports.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -85,6 +85,12 @@ archivist.search.queryFields.keywords.all = 1.0
 ### Default search field and boost value.
 archivist.search.queryFields.keywords.all.raw = 2.0
 
+## Import Settings
+
+### The default suggest path filter for zorroa server side imports.
+### This setting should be overwritten by a production configuration.
+archivist.import.suggest.paths.zorroa=/
+
 ## Export Settings
 
 ### The maximum number of assets a user can export at one time.
