--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -17,3 +17,8 @@ archivist.events.port=7087
 # Set the shared data path to the plugin installation spot.
 #
 archivist.path.shared=../unittest/shared
+
+### Paths the archivist is allowed to look at for importing.
+archivist.import.suggest.paths.test01=../unittest/resources
+archivist.import.suggest.paths.zorroa=/zorroa
+
