server: default the analyst data =false.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -9,7 +9,7 @@ analyst.executor.maxQueueSize = 4
 
 analyst.master.host = http://archivist:8066
 
-analyst.index.data=true
+analyst.index.data=false
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
 
