Added option to disable backups.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -121,6 +121,9 @@ archivist.maintenance.analyst.inactiveTimeoutSeconds = 60
 ### Remove job logs and task data after N days.
 archivist.maintenance.jobs.expireDays = 7
 
+### Enable DB backups
+archivist.maintenance.backups.enabled = false
+
 ### Remove backup data after the given period of time.
 archivist.maintenance.backups.expireDays = 7
 
