Enabled HTTP logging.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -182,6 +182,30 @@ server.session.persistent=false
 ### Determines if SSL is enabled or not.
 server.ssl.enabled = false
 
+### The path to the tomcat basedir.
+server.tomcat.basedir=${archivist.path.home}/logs
+
+### The directory to store tomcat logs
+server.tomcat.accesslog.directory=http
+
+### Determines if HTTP access logs are enabled.
+server.tomcat.accesslog.enabled=true
+
+### The pattern to use for the access logs.
+server.tomcat.accesslog.pattern=common
+
+### Name of the access log file.
+server.tomcat.accesslog.prefix=access_log
+
+### Rename access logs on rotate.
+server.tomcat.accesslog.rename-on-rotate=true
+
+### Add extended attributes like request IP and time.
+server.tomcat.accesslog.request-attributes-enabled=true
+
+### The log file suffix
+server.tomcat.accesslog.suffix=.log
+
 ## Spring Thymeleaf Settings
 
 ### The classpath to Thymeleaf templates.
