Fixes changed archivist configuration properties.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -217,10 +217,10 @@ spring.thymeleaf.excluded-view-names=index
 ## File Upload Settings
 
 ### The maximum filesize for a multipart request.
-multipart.max-file-size=100Mb
+spring.http.multipart.max-file-size=250Mb
 
 ## The maxiumum size of a multipart request.
-multipart.max-request-size=500Mb
+spring.http.multipart.max-request-size=500Mb
 
 ## Heath and Management
 
