Updated analyst to use new SharedData.

--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -5,9 +5,4 @@ analyst.path.index=unittest/index
 zorroa.cluster.index.alias=archivist
 zorroa.cluster.index.port=9401
 
-zorroa.cluster.path.shared=../unittest/shared
-zorroa.cluster.path.ofs=${zorroa.cluster.path.shared}/storage
-zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
-zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
-zorroa.cluster.path.jobs=${zorroa.cluster.path.shared}/jobs
-zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
+zorroa.cluster.path.shared=/tmp/analyst_tests
