Fixes issue with empty values being serialized in json.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -246,6 +246,7 @@ logging.level.io.undertow.request=OFF
 ## JSON Options
 
 ### Disables serializing null values.
-spring.jackson.serialization-inclusion:non_null
+
+spring.jackson.serialization-inclusion=non_empty
 
 
