archivist: updated to use zorroa-test-data repo.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -19,6 +19,6 @@ archivist.events.port=7087
 archivist.path.shared=../unittest/shared
 
 ### Paths the archivist is allowed to look at for importing.
-archivist.import.suggest.paths.test01=../unittest/resources
+archivist.import.suggest.paths.test01=../../zorroa-test-data
 archivist.import.suggest.paths.zorroa=/zorroa
 
