common: fixes issue with geo_point mapping detection.

--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -189,6 +189,7 @@
       "dynamic_templates": [
         {
           "shape_template": {
+            "match_pattern": "regex",
             "match": "^.+Shape$|^shape$",
             "mapping": {
               "type": "geo_shape"
@@ -197,8 +198,8 @@
         },
         {
           "point_template": {
+            "match_pattern": "regex",
             "match": "^.+Point|^point$",
-            "match_mapping_type": "double",
             "mapping": {
               "type": "geo_point"
             }
