Archivist: added Path support to dyhi

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -112,6 +112,9 @@ archivist.events.port=8087
 ### Dertermine if SSL is available event port. (deprecated)
 archivist.events.ssl=false
 
+## Dynamic Hierarchy  Settings
+archivist.dyhi.maxFoldersPerLevel=2048
+
 ## Maintenance options.
 
 ### Number of seconds on inactivity before an analyst is considered down.
