Analyst: added flag for pure data analyst.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -4,6 +4,10 @@
 # -1 for 1/2 the number of available CPUS
 analyst.executor.threads = 0
 
+# Set to true if the analyst should execute tasks.  Setting this
+# to false and 'analyst.index.true' will make this a pure data node.
+analyst.executor.enabled = true
+
 # Maximum number of tasks that can be queued at one time.
 analyst.executor.maxQueueSize = 4
 
