Fixed watermarking and added the ability to add date and user.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -102,7 +102,13 @@ archivist.export.maxAssetCount=1024
 archivist.watermark.enabled = false
 
 ### Text to apply to proxy images.
-archivist.watermark.template = Copyright Foo
+archivist.watermark.template = Requested by #[USER] on #[DATE]
+
+### The minimum width the image must be to get a watermark.
+archivist.watermark.min-proxy-width = 384
+
+### The watermark font size
+archivist.watermark.font-size = 6
 
 ## Event port configuration (deprecated)
 
