--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -108,39 +108,6 @@
         },
         "links": {
           "properties": {
-
-          }
-        },
-        "source": {
-          "properties": {
-            "directory": {
-              "type": "string",
-              "index": "analyzed",
-              "fields": {
-                "raw": {
-                  "type": "string",
-                  "index": "not_analyzed"
-                },
-                "dir": {
-                  "type": "string",
-                  "analyzer": "path_analyzer"
-                }
-              }
-            },
-            "path": {
-              "type": "string",
-              "index" : "analyzed",
-              "fields": {
-                "raw": {
-                  "type": "string",
-                  "index": "not_analyzed"
-                },
-                "dir": {
-                  "type": "string",
-                  "analyzer": "path_analyzer"
-                }
-              }
-            }
           }
         },
         "permissions": {
@@ -202,6 +169,22 @@
             "match": "^.+Point|^point$",
             "mapping": {
               "type": "geo_point"
+            }
+          }
+        },
+        {
+          "path_template": {
+            "match_pattern": "regex",
+            "match": "^.+Path|^path$|^directory$",
+            "mapping": {
+              "type": "string",
+              "analyzer": "path_analyzer",
+              "fields": {
+                "raw": {
+                  "type": "string",
+                  "index": "not_analyzed"
+                }
+              }
             }
           }
         },
