--- a/cloudproxy/src/main/resources/application.properties
+++ b/cloudproxy/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8090
+server.path.home=.
 
 cloudproxy.paths.config=config
 cloudproxy.paths.shared=shared
 cloudproxy.run-at-startup=true
 
 spring.jackson.default-property-inclusion=non_null
-
