Archivist: added reset password endpoints

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -177,6 +177,14 @@ zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
 
 # Spring Settings
 
+## Mail Settings
+
+### The hostname of the mail server.
+spring.mail.host = mail
+
+### The port the mail server is running on.
+spring.mail.port = 25
+
 ## Server Settings
 
 ### The TCP port for client libraries for communicate with server.
