--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -22,3 +22,9 @@ archivist.path.shared=../unittest/shared
 archivist.import.suggest.paths.test01=../../zorroa-test-data
 archivist.import.suggest.paths.zorroa=/zorroa
 
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username=smtp@zorroa.com
+spring.mail.password=3Ja84m*Du+86
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
