--- a/common/src/test/resources/test.properties
+++ b/common/src/test/resources/test.properties
@@ -2,6 +2,4 @@ test.prop.string=abc
 test.prop.int=123
 test.prop.double=3.14159
 test.prop.bool=true
-
-
-
+test.list=file:src/test/resources/stuff.txt
