Added support for multiarchivist analysts.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -7,16 +7,15 @@ analyst.executor.threads = 0
 # Set to true if the analyst should execute tasks.  Setting this
 # to false and 'analyst.index.true' will make this a pure data node.
 analyst.executor.enabled = true
+analyst.key.file=analyst.key
 
 analyst.master.host = http://archivist:8066
-
 analyst.index.data=false
+analyst.index.host=archivist:8066
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
 
 server.port = 8099
-server.devices=eth0,eth1,wlan0,en0,en1
-
 server.ssl.enabled = false
 
 
