--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -1,6 +1,7 @@
 server.port = 8099
 
 analyst.path.index=unittest/index
+analyst.key.file=analyst.key
 
 zorroa.cluster.index.alias=archivist
 zorroa.cluster.index.port=9401
