--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -197,9 +197,9 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.7</version>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-ec2</artifactId>
+            <version>1.11.118</version>
         </dependency>
 
         <!-- web interface depends -->
