cloud proxy: refactored local job system so things can easily be canceled and monitored.

--- a/cloudproxy/src/main/resources/application.properties
+++ b/cloudproxy/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.path.home=.
 
 cloudproxy.paths.config=config
 cloudproxy.paths.shared=shared
-cloudproxy.run-at-startup=true
+cloudproxy.run-at-startup=false
 
 spring.jackson.default-property-inclusion=non_null
