--- a/cloudproxy/unittest/config/config.json
+++ b/cloudproxy/unittest/config/config.json
@@ -1,10 +1,8 @@
 {
-  "startNow" : false,
-  "archivistUrl" : "https://nohost.com",
-  "hmacKey" : "100-100-100-100",
-  "authUser" : "remote_user",
-  "paths" : [ "/foo" ],
-  "schedule" : "0 12 12 12 12 ?",
-  "threads" : 4,
-  "pipelineId" : 22
+  "authUser": "admin",
+  "hmacKey": "00000000-0000-0000-0000-000000000000",
+  "startNow": false,
+  "archivistUrl": "http://localhost:8066",
+  "paths": ["../../zorroa-test-data/images"],
+  "pipelineId": 1
 }
