archivist: more unittest build/clean changes.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -1,6 +1,6 @@
 
 archivist.path.index=unittest/index
-
+archivist.path.home=unittest
 #
 # Override the location of the unittest DB so it doesn't pick up data
 # we add from running the server locally.
