archivist: define path to curator.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -14,6 +14,9 @@ archivist.path.db=${archivist.path.home}/db/h2/archivist
 ### The path where Archivist will store a its portion of the distributed asset database.
 archivist.path.index=${archivist.path.home}/db/index
 
+### The path where Archivist will look for curator
+archivist.path.curator=${archivist.path.home}/web/curator
+
 ## Shared Path Settings
 
 ### The path where the Archivist will look for the shared data root.
