all: converted the NetworkEnvironment object to be used by both archivist/analyst. Fixes issue where the analyst is submitting the wrong talk back url.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,6 +14,13 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-ec2</artifactId>
+            <version>1.11.118</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
