--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -17,5 +17,6 @@ analyst.path.index=${analyst.path.home}/db/index
 
 server.port = 8099
 server.ssl.enabled = false
+server.aws.check-location = false
 
 
