archivist: disables the catalina logging in favor of our own smaller stack traces.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -261,7 +261,11 @@ flyway.check-location=true
 ## JSON Options
 
 ### Disables serializing null values.
-
 spring.jackson.default-property-inclusion=non_null
+
+## Logging Options
+
+### Disable the overly verbose Catalina logging.
+logging.level.org.apache.catalina=OFF
 
 
