--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <java.version>1.8</java.version>
         <zorroa-server.version>0.35.0</zorroa-server.version>
-        <spring-boot.version>1.4.2.RELEASE</spring-boot.version>
+        <spring-boot.version>1.4.6.RELEASE</spring-boot.version>
     </properties>
 
     <modules>
@@ -117,6 +117,7 @@
                 <version>${zorroa-server.version}</version>
             </dependency>
 
+            <!-- ALSO CHANGE IN zorroa-plugin-sdk root POM-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
