archivist: added configuration options for job priority.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -94,10 +94,16 @@ archivist.search.queryFields.keywords.all.raw = 2.0
 ### This setting should be overwritten by a production configuration.
 archivist.import.suggest.paths.zorroa=/
 
+### The default priority for an import task. Lower is better.
+archivist.import.priority = 100
+
 ## Export Settings
 
 ### The maximum number of assets a user can export at one time.
 archivist.export.maxAssetCount=1024
+
+### The default priority for an export task.  Lower is better.
+archivist.export.priority = 10
 
 ## Watermark Settings
 
