--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -191,11 +191,20 @@
           }
         },
         {
-          "binary_template": {
+          "byte_template": {
             "match_mapping_type": "long",
-            "match": "binary",
+            "match": "_byte",
             "mapping": {
               "type": "byte"
+            }
+          }
+        },
+        {
+          "short_template": {
+            "match_mapping_type": "long",
+            "match": "_short",
+            "mapping": {
+              "type": "short"
             }
           }
         },
