common: added content field mapping.

--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -209,6 +209,15 @@
           }
         },
         {
+          "binary_template": {
+            "match_mapping_type": "string",
+            "match": "content",
+            "mapping": {
+              "type": "string"
+            }
+          }
+        },
+        {
           "color_template": {
             "path_match": "*.colors",
             "mapping": {
