large refactor: replaced old cluster system with thrift based system.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -55,7 +55,7 @@ archivist.index.master=true
 ## Internal DB configuration.
 
 ### The JDBC URL to the Archivist SQL database.
-archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1
+archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1;LOCK_TIMEOUT=10000
 
 ### The driver for the Archivist SQL database.
 archivist.datasource.primary.driver-class-name=org.h2.Driver
@@ -149,6 +149,10 @@ archivist.maintenance.backups.expireDays = 7
 # Shared cluster settings are propagated to the Analysts.
 
 ## Custer Index Settings
+## Cluster Server Settings.
+
+cluster.server.port = 8065
+
 
 ### The name of the elasticsearch index.
 zorroa.cluster.index.alias=archivist
