--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -9,11 +9,14 @@ analyst.executor.threads = 0
 analyst.executor.enabled = true
 analyst.key.file=analyst.key
 
-analyst.master.host = http://archivist:8066
+analyst.master.host = archivist:8065
+
 analyst.index.data=false
-analyst.index.host=archivist:8066
+analyst.index.host=archivist:9401
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
+
+cluster.server.port = 8098
 
 server.port = 8099
 server.ssl.enabled = false
