--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -17,7 +17,8 @@
           "filter": [
             "trim",
             "delimiter_filter",
-            "lowercase"
+            "lowercase",
+            "porter_stem"
           ]
         },
         "case_sensitive": {
