server: allow server config to customize sort order.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -88,6 +88,10 @@ archivist.search.queryFields.keywords.all = 1.0
 ### Default search field and boost value.
 archivist.search.queryFields.keywords.all.raw = 2.0
 
+### The default sort fields in the format of field:direction,field:direction.
+### Score is always first.
+archivist.search.sortFields = _timestamp:DESC
+
 ## Import Settings
 
 ### The default suggest path filter for zorroa server side imports.
