server: better name for the cluster command port.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -152,11 +152,12 @@ archivist.maintenance.backups.expireDays = 7
 # Cluster Settings
 # Shared cluster settings are propagated to the Analysts.
 
-## Custer Index Settings
 ## Cluster Server Settings.
 
-cluster.server.port = 8065
+### The cluster command port.
+archivist.cluster.command.port = 8065
 
+## Custer Index Settings
 
 ### The name of the elasticsearch index.
 zorroa.cluster.index.alias=archivist
