--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -16,7 +16,7 @@ analyst.index.host=archivist:9401
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
 
-cluster.server.port = 8098
+analyst.cluster.command.port = 8098
 
 server.port = 8099
 server.ssl.enabled = false
