archivist: handle the removal of the fuzzy property from AssetSearch.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -92,6 +92,10 @@ archivist.search.queryFields.keywords.all.raw = 2.0
 ### Score is always first.
 archivist.search.sortFields = _timestamp:DESC
 
+### The default sort fields in the format of field:direction,field:direction.
+### Score is always first.
+archivist.search.queryAnalyzer = whitespace
+
 ## Import Settings
 
 ### The default suggest path filter for zorroa server side imports.
