archivist: remove expired analysts.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -144,6 +144,10 @@ archivist.dyhi.maxFoldersPerLevel=2048
 ### Analysts report in every 15 seconds.
 archivist.maintenance.analyst.inactiveTimeoutSeconds = 60
 
+### Number of hours of being down before an analyst is removed
+### from the list.
+archivist.maintenance.analyst.expireHours = 24
+
 ### Remove job logs and task data after N days.
 archivist.maintenance.jobs.expireDays = 7
 
