archivist: default HMAC auth by default.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -66,6 +66,11 @@ archivist.datasource.primary.username=sa
 ### The password for the Archvist SQL database.
 archivist.datasource.primary.password=
 
+## HMAC Security configuration.
+
+### Determines if HMAC security can be used. Defaults to false.
+archivist.security.hmac.enabled=false
+
 ## LDAP Security configuration.
 
 ### Determines if the Archivist LDAP plugin is enabled.
