archivist: default HMAC to on for now, need for running import jobs.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -69,7 +69,7 @@ archivist.datasource.primary.password=
 ## HMAC Security configuration.
 
 ### Determines if HMAC security can be used. Defaults to false.
-archivist.security.hmac.enabled=false
+archivist.security.hmac.enabled=true
 
 ## LDAP Security configuration.
 
